--- a/src/app/users/components/users-table/users-table.component.html
+++ b/src/app/users/components/users-table/users-table.component.html
@@ -13,25 +13,25 @@
 
   <!-- Email Column -->
   <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
+    <th mat-header-cell *matHeaderCellDef>Email</th>
     <td mat-cell *matCellDef="let element">{{ element.email }}</td>
   </ng-container>
 
   <!-- City Column -->
   <ng-container matColumnDef="city">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
+    <th mat-header-cell *matHeaderCellDef>City</th>
     <td mat-cell *matCellDef="let element">{{ element.city }}</td>
   </ng-container>
 
   <!-- Region Column -->
   <ng-container matColumnDef="region">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
+    <th mat-header-cell *matHeaderCellDef>Region</th>
     <td mat-cell *matCellDef="let element">{{ element.region }}</td>
   </ng-container>
 
   <!-- Country Column -->
   <ng-container matColumnDef="country">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
+    <th mat-header-cell *matHeaderCellDef>Country</th>
     <td mat-cell *matCellDef="let element">{{ element.country }}</td>
   </ng-container>
 
