--- a/src/app/users/components/users-table/users-table.component.html
+++ b/src/app/users/components/users-table/users-table.component.html
@@ -1,38 +1,38 @@
 <div class="mat-elevation-z8">
-  <table mat-table [dataSource]="dataSource" class="users-table">
+  <table mat-table matSort [dataSource]="dataSource" class="users-table">
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
       <td mat-cell *matCellDef="let element">{{ element.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
 
     <!-- Email Column -->
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
       <td mat-cell *matCellDef="let element">{{ element.email }}</td>
     </ng-container>
 
     <!-- City Column -->
     <ng-container matColumnDef="city">
-      <th mat-header-cell *matHeaderCellDef>City</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>City</th>
       <td mat-cell *matCellDef="let element">{{ element.city }}</td>
     </ng-container>
 
     <!-- Region Column -->
     <ng-container matColumnDef="region">
-      <th mat-header-cell *matHeaderCellDef>Region</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Region</th>
       <td mat-cell *matCellDef="let element">{{ element.region }}</td>
     </ng-container>
 
     <!-- Country Column -->
     <ng-container matColumnDef="country">
-      <th mat-header-cell *matHeaderCellDef>Country</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Country</th>
       <td mat-cell *matCellDef="let element">{{ element.country }}</td>
     </ng-container>
 
