Create add user funcionality

--- a/src/app/users/pages/users/users.component.html
+++ b/src/app/users/pages/users/users.component.html
@@ -2,7 +2,9 @@
   <button mat-raised-button color="primary" (click)="onLoadUsers()">
     Load users
   </button>
-  <button mat-raised-button color="accent">Add user</button>
+  <button mat-raised-button color="accent" (click)="onAddUser()">
+    Add user
+  </button>
   <button mat-raised-button color="warn">Remove user</button>
 </div>
 <div class="content">
