Display confirmation dialog before removing user

--- a/src/app/users/components/users-table/users-table.component.html
+++ b/src/app/users/components/users-table/users-table.component.html
@@ -44,7 +44,7 @@
           mat-icon-button
           color="warn"
           aria-label="Example icon button with a heart icon"
-          (click)="onRemoveUser(element.id)"
+          (click)="onRemoveUser(element)"
         >
           <mat-icon>delete</mat-icon>
         </button>
